# moose

./: .gitignore  Cargo.toml  README.md
git-moose/: Cargo.toml
git-moose/src/: commits.rs  crud.rs  database_models.rs  github_client.rs  issues.rs  lib.rs  main.rs  models.rs  repository.rs  schema.rs
git-moose/tests/: commits_test.rs  repository_test.rs
src/: github_client.rs  issues.rs  lib.rs  main.rs  models.rs
tauri-app/: package-lock.json
tauri-app/src/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
tauri-app/src/src-tauri/src/: main.rs
