[package]
name = "moose"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread"] }
indicatif = "0.16"
serde_json = "1.0.120"
chrono = "0.4.38"
serde = { version = "1.0.204", features = ["derive"] }
